resources/css/brand-top.css
.brand-top h1 {
  color: var(--menu-link-color);
  font-size: 32px;
  border: none;
  line-height: 0.8em;
}

.brand-top .description {
  color: var(--menu-link-color);
  font-size: 12.5px;
  letter-spacing: 0.2px;
  line-height: 0.8em;
}

.brand-top .logo-container a {
  display: inline-block;
}

.brand-top .logo {
  max-height: 42px;
}

